# OpenUNBcrypto

./: CMakeLists.txt  README.md
include/: OpenUNBConsts.h  OpenUNBDecrypterHL.h  OpenUNBDecrypterLL.h  OpenUNBEncrypterHL.h  OpenUNBEncrypterLL.h  OpenUNBTypes.h
src/: OpenUNBDecrypterHL.cpp  OpenUNBEncrypterHL.c  OpenUNBEncrypterHL.cpp  OpenUNBEncrypterLL.c  OpenUNBEncrypterLL.cpp  crc24.c  crc24.cpp
test/: openUNB_encrypter.c  openUNB_encrypter.cpp  openUNB_test1.c
